[package]
name = "liarslie"
version = "0.1.0"
edition = "2021"

[dependencies]
text-colorizer = "1.0.0"
clap = { version = "4.4.*", features = ["derive", "cargo"] }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0.196", features = ["derive"] } 
serde_json = "1.0"
ring = "0.17"
base64 = "0.21"
bincode = "1.3"
anyhow = "1"